--- a/Minimal/minimal-3.html
+++ b/Minimal/minimal-3.html
@@ -88,7 +88,7 @@
 
   <div class="product-card">
     <div class="product-image">
-      <img src="https://source.unsplash.com/400x400/?furniture,modern" alt="Product Image">
+      <img src="https://img.freepik.com/free-vector/white-office-chair_1053-316.jpg" alt="Product Image">
     </div>
     <div class="product-info">
       <h2>Rounded Sofa</h2>
