--- a/Minimal/minimal-8.html
+++ b/Minimal/minimal-8.html
@@ -91,7 +91,7 @@
 
   <div class="product-card">
     <div class="product-image">
-      <img src="https://images.unsplash.com/photo-1600185366173-117fe39b8c5f?auto=format&fit=crop&w=800&q=80" alt="Stylish Chair">
+      <img src="https://static.vecteezy.com/system/resources/previews/015/936/716/non_2x/realistic-detailed-3d-retro-wood-chair-vector.jpg" alt="Stylish Chair">
     </div>
     <div class="product-info">
       <h2>Stylish Chair</h2>
